k3s-k8s-scripts/ingress_flask.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-flask
  namespace: flask-container
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-flask
            port:
              number: 80
